# simple_webcrawler

./: .gitignore  crawler.py  pyproject.toml  readme.md
