[project]
name = "playwright-web-crawler"
version = "1.0.0"
description = "An async CLI web crawler using Playwright with Markdown content extraction"
dependencies = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2020.1.16",
    "aiofiles>=23.0.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# Removed build-system and project.scripts to avoid package building issues
# This is now just a dependency specification file

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"